NTI-7167 fix add and remove event icons from being cut off

--- a/src/overview/lesson/items/event/editor/View.scss
+++ b/src/overview/lesson/items/event/editor/View.scss
@@ -12,7 +12,7 @@
 
 			.create-new {
 				position: absolute;
-				right: 10px;
+				right: 17px;
 				top: 10px;
 				height: 40px;
 				width: 40px;
@@ -50,7 +50,7 @@
 
 			.event {
 				display: flex;
-				margin: 10px 10px 0 10px;
+				margin: 10px 15px 0 15px;
 				padding: 5px;
 				box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.15);
 				cursor: pointer;
